feat: implement BusinessUnitDomain persistence and update BusinessDomain adapter for relationship management